--- a/minstagram.html
+++ b/minstagram.html
@@ -6,7 +6,8 @@
     <title>Las mejores redes sociales</title>
      <style>
         h1 {color:rgb(241, 38, 136);}
-        p {color:rgb(7, 7, 60);}
+        p {color:rgb(161, 23, 129);}
+         li{ color: rgb(161, 23, 129)}
 
     </style>
 </head>
@@ -14,6 +15,23 @@
     <h1>INSTAGRAM</h1>
     <a href="index.html">Regresar al menú</a>
 
+    <p>
+        Instagram es una red social creada en 2010 por Kevin Systrom y Mike Krieger, enfocada principalmente en compartir fotos y videos. En 2012 fue adquirida por Facebook (ahora Meta Platforms, Inc.), lo que permitió su gran crecimiento a nivel mundial.
+    </p>
+<p>
+        Los usuarios pueden: 
+        <ul>
+
+            <li>Crear un perfil personal o de empresa.</li>
+            <li>Publicar fotos, videos y stories (contenidos que desaparecen en 24 horas).</li>
+            <li>Subir Reels, que son videos cortos y creativos.</li>
+            <li>Transmitir en vivo con Instagram Live.</li>
+            <li>Seguir cuentas, dar “me gusta”, comentar y enviar mensajes privados.</li>
+            <li>Comprar productos directamente desde la plataforma a través de Instagram Shopping.</li>
+ </p>
+          <p ALIGN="center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TlZHGzs17Ko?si=Sb9MyRpDrPUUlScd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </p>
     
 </body>
 </html>
